--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
-sonar.projectKey=analisis-ecommerce
-sonar.projectName=analisis-ecommerce
+sonar.projectKey=analisis-ecommerce-rcd
+sonar.projectName=analisis-ecommerce-rcd
 sonar.projectVersion=1.0.0
-sonar.projectBaseDir=ecommerce-demo
+sonar.projectBaseDir=.
 sonar.login=54549f7a2a7b127d103dbb8c8579a942a20ee98c
 sonar.host.url=http://34.217.95.83:9000/
